[FIX] Use protocol from options, default to https

--- a/testdist/testdist.html
+++ b/testdist/testdist.html
@@ -5,23 +5,6 @@
   <meta name="description" content="Test page for ContentService.io development">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-  body {
-    background: #20262E;
-    font-family: Helvetica;
-  }
-
-  #app {
-    margin-top: 35px;
-    background: #fff;
-    padding: 20px;
-  }
-
-  .authservice-login {
-    margin-top: 20px;
-    margin-bottom: 40px;
-  }
-  </style>
 </head>
 <body>
   <!-- font-awesome -->
@@ -31,8 +14,8 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
   <script src="https://unpkg.com/vue@2.5.17/dist/vue.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/vue-contentservice@0.1.71/dist/vue-contentservice.css">
   <!--
+  <link rel="stylesheet" href="https://unpkg.com/vue-contentservice@latest/dist/vue-contentservice.css">
   <script src="https://unpkg.com/vue-contentservice@latest/dist/vue-contentservice.umd.js"></script>
 -->
   <script src="../dist/vue-contentservice.umd.js"></script>
@@ -44,18 +27,7 @@
   <link rel="stylesheet" href="../../vue-docservice/dist/vue-docservice.css">
 
   <div id="app" class="has-text-centered">
-
-    <!-- Already logged in -->
-    <h1>
-    This page is "content managed"
-    </h1>
-
-    <input type="button" @click="pressed" value="CLICK ME"/>
-
-
-    <content-layout-editor class=".my-triple-pane" :editable="editable" :anchor="anchor" zheight="300px" zeditingHeight="600px"></content-layout-editor>
-
-
+    <content-layout-editor :editable="editable" :anchor="anchor"></content-layout-editor>
   </div>
 
   <script>
@@ -97,15 +69,18 @@
 
     defaultIconPack: 'fas'
   };
+  const csOptions = {
+    protocol: 'http',
+    host: 'uat.crowdhound.io',
+    port: 80,
+    version: '2.0',
+    apikey: 'API10O0X1NS8FWUTO3FXKN15ZOR09',
+    //froalaActivationKey: FroalaKey
+    defaultIconPack: 'fas'
+  }
 
-
-  console.log(`window.ContentService`, window.ContentService)
-  Vue.use(window.ContentService, options);
-  console.log(`Hoola 1`)
-  Vue.use(window.DocService, {
-
-  });
-  console.log(`Hoola 2`)
+  Vue.use(window.ContentService, csOptions);
+  Vue.use(window.DocService, { });
 
 
   new Vue({
@@ -115,22 +90,15 @@
         // NEW
         leftPane: true,
         editable: true,
-        anchor: 'mbc.test.layout',
+        anchor: 'contentservice.example.layout',
       }
     },
-    methods: {
-      pressed () {
-        console.log(`Pressed!!!`);
-        console.log('this.$content: ', this.$content);
-        console.log('this.$content.store: ', this.$content.store);
-      }
-    },
-    created() {
-      console.log(`Start created()`);
-      console.log('$content: ', this.$content);
-      console.log('this.$content.store: ', this.$content.store);
-      console.log(`End created()`);
-    },
+    // created() {
+    //   console.log(`Start created()`);
+    //   console.log('$content: ', this.$content);
+    //   console.log('this.$content.store: ', this.$content.store);
+    //   console.log(`End created()`);
+    // },
   })
 
   </script>
