Call the key 'contentId' rather than 'anchor'
... even though it is used as a Crowdhound anchor.

--- a/testdist/testdist.html
+++ b/testdist/testdist.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="../../vue-docservice/dist/vue-docservice.css">
 
   <div id="app" class="has-text-centered">
-    <content-layout-editor :editable="editable" :anchor="anchor"></content-layout-editor>
+    <content-layout-editor :editable="editable" :contentId="contentId"></content-layout-editor>
   </div>
 
   <script>
@@ -90,7 +90,7 @@
         // NEW
         leftPane: true,
         editable: true,
-        anchor: 'contentservice.example.layout',
+        contentId: 'contentservice.example.layout',
       }
     },
     // created() {
