Property editing, remove editContext, tidy
- Improvements to property editing
- replaced 'editContext' with 'context'
- removed unused scrap files
- bug using getter as this.$content.store.state.propertyElement.

--- a/testdist/testdist.html
+++ b/testdist/testdist.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="../../vue-docservice/dist/vue-docservice.css">
 
   <div id="app" class="has-text-centered">
-    <content-layout-editor :editable="editable" :contentId="contentId"></content-layout-editor>
+    <content-layout-editor :editable="editable" :contentId="contentId" :context="{}")></content-layout-editor>
   </div>
 
   <script>
